# flare-ai-kit

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-scripts.yml
docs/: cyclo_readme.md  firelight_readme.md  kinetic_readme.md  sceptre_readme.md  sparkdex_readme.md  stargate_readme.md
examples/: 05_ingest_pdf.py  09_cyclo_leverage.py  10_sceptre_staking.py  11_kinetic_lending.py  12_firelight_xrp_staking.py  13_stargate_bridge.py  sparkdex_swap.py
scripts/: ingest_pdf.py
src/flare_ai_kit/abis/: CycloReceiptSFLR.json  CycloVaultSFLR.json  FirelightVault.json  FirelightVault_Implementation.json  KineticKToken.json  SceptreSFLR.json
src/flare_ai_kit/common/: exceptions.py
src/flare_ai_kit/ecosystem/: __init__.py  api.py  flare.py  settings.py
src/flare_ai_kit/ecosystem/applications/: __init__.py  cyclo.py  firelight.py  kinetic.py  sceptre.py  sparkdex.py  stargate.py
tests/unit/ecosystem/: test_explorer.py
tests/unit/ecosystem/applications/: __init__.py  test_cyclo.py  test_firelight.py  test_kinetic.py  test_sceptre.py  test_sparkdex.py  test_stargate.py
